--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -238,6 +238,24 @@ body {
     color: wheat;
 }
 
+@media (max-width: 576px) {
+    .p-5.mb-4 {
+        padding: 2rem 1rem;
+    }
+
+    h1.display-5 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.2rem;
+    }
+
+    p.fs-4 {
+        font-size: 1rem;
+    }
+}
+
 @media (max-width: 768px) {
     .tank-hero-img {
         max-height: 25vh;
@@ -288,20 +306,22 @@ body {
     }
 }
 
-@media (max-width: 576px) {
-    .p-5.mb-4 {
-        padding: 2rem 1rem;
-    }
 
-    h1.display-5 {
-        font-size: 2rem;
-    }
 
-    h3 {
-        font-size: 1.2rem;
-    }
+@media (min-width: 1200px) {
+  #hero-text-side h1 {
+    font-size: 4rem;      /* Bigger core headline */
+    letter-spacing: 1px;
+  }
 
-    p.fs-4 {
-        font-size: 1rem;
-    }
+  #hero-text-side h2 {
+    font-size: 2rem;
+    max-width: 90%;
+  }
+
+  #hero-text-side p {
+    font-size: 1.25rem;
+    max-width: 85%;
+    line-height: 1.7;
+  }
 }
